--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -163,13 +163,13 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders both
 
 # Display the directory name in tabs?
 set dirname_in_tabs true
 
 # Enable the mouse support?
-set mouse_enabled true
+set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -356,7 +356,7 @@ map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
 map <esc> change_mode normal
-map ~ set viewmode!
+map x set viewmode!
 
 map i display_file
 map <A-j> scroll_preview 1
@@ -759,3 +759,4 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+default_linemode devicons
