--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -267,7 +267,8 @@ set show_selection_in_titlebar true
 # The delay that ranger idly waits for user input, in milliseconds, with a
 # resolution of 100ms.  Lower delay reduces lag between directory updates but
 # increases CPU load.
-set idle_delay 2000
+set idle_delay 100
+# set idle_delay 2000
 
 # When the metadata manager module looks for metadata, should it only look for
 # a ".metadata.json" file in the current directory, or do a deep search and
@@ -402,10 +403,10 @@ map uV      toggle_visual_mode reverse=True
 map <F1> help
 map <F2> rename_append
 map <F3> display_file
-map <F4> edit
+map e edit
 map <F5> copy
 map <F6> cut
-map <F7> console mkdir%space
+map mkd console mkdir%space
 map <F8> console delete
 #map <F8> console trash
 map <F10> exit
