--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 include ./theme.conf
 
-font_family      jetbrains mono
+font_family      comic mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
