--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -38,7 +38,7 @@ set show_hidden true
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
-# set confirm_on_delete multiple
+set confirm_on_delete never
 
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
@@ -622,6 +622,9 @@ map um<any> unset_bookmark %any
 
 map m<bg>   draw_bookmarks
 copymap m<bg>  um<bg> `<bg> '<bg> p`<bg> p'<bg>
+
+# Custom Key
+map br console bulkrename
 
 # Generate all the chmod bindings with some python help:
 eval for arg in "rwxXst": cmd("map +u{0} shell -f chmod u+{0} %s".format(arg))
