--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -70,7 +70,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -113,14 +113,14 @@ set preview_images false
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method w3m
+set preview_images_method kitty
 
-# Delay in seconds before displaying an image with the w3m method.
-# Increase it in case of experiencing display corruption.
-set w3m_delay 0.02
-
-# Manually adjust the w3mimg offset when using a terminal which needs this
-set w3m_offset 0
+# # Delay in seconds before displaying an image with the w3m method.
+# # Increase it in case of experiencing display corruption.
+# set w3m_delay 0.02
+# 
+# # Manually adjust the w3mimg offset when using a terminal which needs this
+# set w3m_offset 0
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
@@ -280,14 +280,14 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers false
+set line_numbers absolute
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
 set relative_current_zero false
 
 # Start line numbers from 1 instead of 0
-set one_indexed false
+set one_indexed true
 
 # Save tabs on exit
 set save_tabs_on_exit true
