ranger cd tab case smart

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -247,7 +247,7 @@ set xterm_alt_key false
 set cd_bookmarks true
 
 # Changes case sensitivity for the cd command tab completion
-set cd_tab_case sensitive
+set cd_tab_case smart
 
 # Use fuzzy tab completion with the "cd" command. For example,
 # ":cd /u/lo/b<tab>" expands to ":cd /usr/local/bin".
@@ -617,6 +617,7 @@ map .. filter_stack show
 # Bookmarks
 map `<any>  enter_bookmark %any
 map '<any>  enter_bookmark %any
+# map j<any>  enter_bookmark %any
 map m<any>  set_bookmark %any
 map um<any> unset_bookmark %any
 
