set metadata_deep_search true

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -275,7 +275,7 @@ set idle_delay 100
 # When the metadata manager module looks for metadata, should it only look for
 # a ".metadata.json" file in the current directory, or do a deep search and
 # check all directories above the current one as well?
-set metadata_deep_search false
+set metadata_deep_search true
 
 # Clear all existing filters when leaving a directory
 set clear_filters_on_dir_change false
