--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -348,6 +348,9 @@ alias travel     scout -aefklst
 # == Define keys for the browser
 # ===================================================================
 
+map <C-f> fzf_select
+map <C-g> fzf_locate
+
 # Basic
 map     Q quitall
 map     q quit
@@ -766,5 +769,10 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+default_linemode devicons
+default_linemode devicons
+default_linemode devicons
+default_linemode devicons
+default_linemode devicons
 default_linemode devicons
 default_linemode devicons
