feat : add chatgpt configuration; chore : update ranger configuration

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -412,6 +412,7 @@ map e edit
 map <F5> copy
 map <F6> cut
 map mkd console mkdir%space
+map toh console touch%space
 map <F8> console delete
 #map <F8> console trash
 map <F10> exit
