fix : ranger configuration

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -778,3 +778,4 @@ default_linemode devicons
 default_linemode devicons
 default_linemode devicons
 default_linemode devicons
+default_linemode devicons
