feat : add nvim configuration - based on nvchad

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -779,3 +779,4 @@ default_linemode devicons
 default_linemode devicons
 default_linemode devicons
 default_linemode devicons
+default_linemode devicons
